内存配置32位系统8G内存